--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1 style="color:solid black;" id="#home"><strong> My personal website &#128512 </strong></h1>
     <hr>
     <h2>My Bio</h2>
-    <img src="imagez/id pic.jpg" alt=" katende chilling with pretty" width="185.9" height="255" style="border-radius: 10.0000px;">
+    <img src="katende/imagez/id pic.jpg" alt=" katende chilling with pretty" width="185.9" height="255" style="border-radius: 10.0000px;">
     <p>
         
      <ul>
